change lastOpenedItemList text color, fix z-index for filters

--- a/src/app/components/item-list-filters/item-list-filters.component.scss
+++ b/src/app/components/item-list-filters/item-list-filters.component.scss
@@ -1,3 +1,7 @@
+:host {
+    z-index: 2;
+}
+
 :host mat-divider {
     margin-bottom: 15px;
 }
