--- a/src/app/components/last-opened-item/last-opened-item.component.scss
+++ b/src/app/components/last-opened-item/last-opened-item.component.scss
@@ -18,7 +18,7 @@
     position: absolute;
     bottom: 0;
     left: 10px;
-    color: rgba(255, 255, 255, 0.7);
+    // color: rgba(255, 255, 255, 0.7);
 }
 
 .hoverInfo {
